--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -1199,3 +1199,20 @@ a {
   color: var(--color-main);
   font-weight: 1.4rem;
 }
+
+
+/* MESSAGES */
+
+.message-box{
+  background: #c51244 !important;
+  padding: 10px !important;
+  border-radius: 0 !important;
+  position: relative; 
+  display: inline-block !important;
+  box-shadow: 1px 1px 1px #aaaaaa;
+  margin-top: 10px;
+}
+
+.message{
+  color: white;
+}
