fixed some wording

--- a/base/templates/base/profile.html
+++ b/base/templates/base/profile.html
@@ -109,7 +109,7 @@
 
         <div class="roomList__header">
           <div>
-            <h2>Study Rooms Hosted by fernando_rosell</a>
+            <h2>Game Rooms Hosted by fernando_rosell</a>
             </h2>
           </div>
         </div>
